# rishat_test_project

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  default.env  docker-compose.local.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/apps/shop/: apps.py  urls.py
backend/app/apps/shop/admin/: item.py
backend/app/apps/shop/migrations/: 0001_initial.py  0002_alter_item_currency.py  0003_alter_item_currency.py
backend/app/apps/shop/models/: item.py
backend/app/apps/shop/serializers/: __init__.py  item.py
backend/app/apps/shop/services/api_managers/: __init__.py  stripe_api_manager.py
backend/app/apps/shop/templates/shop/: item_detail.html  payment_success.html
backend/app/apps/shop/views/: __init__.py  item.py  payment_success.py
backend/app/config/: settings.py  urls.py
nginx/conf/: nginx.conf
