[project]
name = "rishat_test_project"
version = "0.1.0"
dependencies = [
    "django==6.0.4",
    "django-cors-headers==4.9.0",
    "django-environ==0.13.0",
    "djangorestframework==3.17.1",
    "psycopg[binary]==3.3.2",
    "stripe==15.1.0",
    "uvicorn[standard]==0.46.0",
]

[project.optional-dependencies]

dev = [
    "black==26.1.0", 
    "flake8==7.3.0",
    "pre-commit==4.5.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | alembic/versions/.*
)/
'''
